2000-10-23  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/multiboot.texi: Upgraded to 0.6.92.
	(Boot information format): Re-designed the graphics table.
	
2000-10-22  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/tutorial.texi: Miscellaneous updates.
	* docs/user-ref.texi: Likewise.
	* docs/appendices.texi: Likewise.
	
2000-10-22  OKUJI Yoshinori  <okuji@gnu.org>

	* util/grub-install.in (usage): Removed unnecessary commas.
	
	* util/grub-md5-crypt.in: New file.
	* util/Makefile.am (sbin_SCRIPTS): Added grub-md5-crypt.
	* configure.in (AC_OUTPUT): Added util/grub-md5-crypt.
	* docs/Makefile.am (man_MANS): Added grub-md5-crypt.8.
	[MAINTAINER_MODE] ($(srcdir)/grub-md5-crypt.8): New target.
	* docs/grub-md5-crypt.8: New file. Generated by help2man.

	* docs/grub.texi (grub-md5-crypt): New direntry.
	(Invoking grub-md5-crypt): New entry.
	* docs/user-ref.texi (Invoking grub-md5-crypt): New chapter.
	
2000-10-22  OKUJI Yoshinori  <okuji@gnu.org>

	From Matthias Granberry <matthias@slurpee.org>:
	* util/grub-install.in (convert): Added backslashes into
	continuous lines.
	
2000-10-21  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/md5.c (check_md5_password): Removed.
	(md5_password): New function. Mostly copied from
	check_md5_password.
	(md5_init): Made static.
	(md5_update): Likewise.
	(md5_final): Likewise.
	* stage2/md5.h (check_md5_password): Changed to just a macro.
	(md5_password): Declared.
	(make_md5_password): New macro.
	* stage2/char_io.c [!STAGE1_5] (grub_strstr): Rewriten, because
	it was too buggy.
	* stage2/builtins.c [USE_MD5_PASSWORDS] (md5crypt_func): New
	function.
	[USE_MD5_PASSWORDS] (builtin_md5crypt): New variable.
	(builtin_table) [USE_MD5_PASSWORDS]: Added a pointer to
	BUILTIN_MD5CRYPT.
	* docs/tutorial.texi (Security): Added a paragraph about
	md5crypt.
	
2000-10-21  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/user-ref.texi: Fixed several typos and some inappropriate
	texinfo commands, and update the descriptions about some
	commands.
	